--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  device_info_plus: ^9.1.2
+  flutter_secure_storage: ^9.0.0
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  flutter_animate: ^4.5.0
+  google_fonts: ^6.1.0
+  qr_code_scanner: ^1.0.1
+  fl_chart: ^0.66.2
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
