--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   qr_code_scanner: ^1.0.1
   fl_chart: ^0.66.2
   carousel_slider: ^4.2.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  dio: ^5.4.1
+  json_annotation: ^4.8.1
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +60,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
+  hive_generator: ^2.0.1
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
