--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,13 @@ dependencies:
   dio: ^5.4.1
   json_annotation: ^4.8.1
   flutter_staggered_grid_view: ^0.7.0
+  connectivity_plus: ^6.1.4
+  intl: ^0.20.2
+  flutter_html: ^3.0.0-beta.2
+  flutter_math_fork: ^0.7.3
+  flutter_html_math: ^3.0.0-alpha.4
+  flutter_markdown: ^0.7.7+1
+
 
 dev_dependencies:
   flutter_test:
