--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ivy_path
-description: "A new Flutter project."
+description: "IvyPath application for OAU aspirants. This app provides a platform for students to access past questions, study materials, and other resources to help them prepare for their POSTUTME exams."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ^3.8.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,13 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  device_info_plus: ^9.1.2
+  device_info_plus: ^11.0.0
   flutter_secure_storage: ^9.0.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   flutter_animate: ^4.5.0
   google_fonts: ^6.1.0
-  qr_code_scanner: ^1.0.1
+  mobile_scanner: ^3.5.6
   fl_chart: ^0.66.2
   carousel_slider: ^4.2.1
   hive: ^2.2.3
@@ -50,16 +50,18 @@ dependencies:
   json_annotation: ^4.8.1
   flutter_staggered_grid_view: ^0.7.0
   connectivity_plus: ^6.1.4
-  intl: ^0.20.2
+  intl: ^0.19.0
   flutter_html: ^3.0.0-beta.2
-  flutter_math_fork: ^0.7.3
+  flutter_math_fork: ^0.7.4
   flutter_html_math: ^3.0.0-alpha.4
   flutter_markdown: ^0.7.7+1
   encrypt: ^5.0.3
   path_provider: ^2.1.5
   firebase_core: ^2.27.1
   firebase_database: ^10.4.10
+  firebase_messaging: ^14.7.10
   timeago: ^3.7.1
+  syncfusion_flutter_pdfviewer: ^30.1.40
 
 
 dev_dependencies:
@@ -75,6 +77,7 @@ dev_dependencies:
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
   hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.14.3
 
 
 
@@ -119,3 +122,15 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
+  windows:
+    generate: true
+    image_path: "assets/images/icon.png"
+    icon_size: 256 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/icon.png"
